# RandomGeometricStructures

./: LICENSE  README.md  pyproject.toml  pyproject_old.toml  setup.cfg
docs/source/: conf.py  index.rst  modules.rst  rgs.mndrpy.rst  rgs.pmaps.rst  rgs.ribbons.rst  rgs.rst  rgs.slimtree.rst
rgs/: __init__.py
rgs/mndrpy/: AlgebraTL.py  Combinatorics.py  DyckPaths.py  ElementTL.py  Matrix.csv  Meander.py  Pairing.py  Statistics.py  Theory.py  Utility.py  __init__.py
rgs/pmaps/: Graph.py  GraphStatistics.py  OrderedTree.py  PlanarGraph.py  TreeUtility.py  Triangulation.py
rgs/ribbons/: Ribbon.py  Statistics.py  Tiling.py  Utility.py
rgs/slimtree/: SlimTrees.py  TreeStatistics.py
tests/ribbons/: test_Ribbon.py  test_Tiling.py
