[tool.poetry]
name = "rgs"
version = "0.1.5"
description = "A small package to display and manipulate random geometry structures like pairings, meanders, triangulations and tilings."
authors = ["Vladislav Kargin <slavakargin@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
