[metadata]
name = RandomGeometricStructures
version = 0.0.1
author = Vladislav Kargin
author_email = slavakargin@yahoo.com
description = A package for generating and displaying random structures like pairings and tilings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slavakargin/RandomGeometricStructures
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
